tests/errors/subroutine2.f90
program subroutine2
    integer :: i
    i = bpe()
    contains
    subroutine bpe()
    end subroutine
end program